# rust-sel4-xxv-demo

./: CMakeLists.txt  Cargo.toml  easy-settings.cmake  rust-toolchain.toml  settings.cmake
.cargo/: config
axidma-pac/: Cargo.toml  axidma.svd
axidma-pac/src/: axi_dma.rs  generic.rs  lib.rs  sg_desc.rs  sg_desc_impl.rs
axidma-pac/src/axi_dma/: mm2s_curdesc.rs  mm2s_curdesc_msb.rs  mm2s_dmacr.rs  mm2s_dmasr.rs  mm2s_length.rs  mm2s_sa.rs  mm2s_sa_msb.rs  mm2s_taildesc.rs  mm2s_taildesc_msb.rs  s2mm_curdesc.rs  s2mm_curdesc_msb.rs  s2mm_da.rs  s2mm_da_msb.rs  s2mm_dmacr.rs  s2mm_dmasr.rs  s2mm_length.rs  s2mm_taildesc.rs  s2mm_taildesc_msb.rs  sg_ctl.rs
axidma-pac/src/mm2s_sg_desc/: app.rs  buf_addr.rs  buf_addr_msb.rs  control.rs  nxt_desc.rs  nxt_desc_msb.rs  status.rs
axidma-pac/src/s2mm_sg_desc/: buf_addr.rs  buf_addr_msb.rs  control.rs  status.rs
axidma-pac/src/sg_desc/: app.rs  buf_addr.rs  buf_addr_msb.rs  control.rs  has_dre.rs  has_stscntrl.rs  nxt_desc.rs  nxt_desc_msb.rs  status.rs  sw_id.rs
src/: config.rs  main.rs  mm.rs  plic.rs  xxv_demo.rs
src/axidma/: bd.rs  bd_ring.rs  hw.rs  mod.rs
src/net/: mod.rs  virtio_net.rs  xxvethernet.rs
support/targets/: README.md  riscv64imac-sel4.json
xxv-pac/: Cargo.toml  xxvethernet.svd
xxv-pac/src/: lib.rs  xxv_ethernet.rs
xxv-pac/src/xxv_ethernet/: anacr.rs  anasr.rs  ancr1.rs  ancr2.rs  ansr.rs  fec.rs  grr.rs  gtwizsr.rs  ltcor.rs  ltcr.rs  ltir.rs  ltpr.rs  ltsr.rs  lttr.rs  mode.rs  rev.rs  rsfec.rs  rst.rs  rxblsr.rs  rxcfg.rs  rxmtu.rs  rxsr.rs  sr.rs  tick.rs  txcfg.rs  txsr.rs  vll.rs
